--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Page</title>
-</head>
-<body>
-  <h1>Hello, GitHub Pages!</h1>
-  <p>This is my first deployment 🚀</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My GitHub Page</title>
+  </head>
+  <body>
+    <h1>Hello, GitHub Pages!</h1>
+    <p>This is my first deployment 🚀</p>
+
+    <button>Add</button>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum nam animi
+      voluptatibus necessitatibus expedita? Sit facilis quis cupiditate laborum
+      est voluptates suscipit omnis rerum. Qui modi voluptatum excepturi
+      voluptates sapiente doloribus nesciunt atque quas quam laboriosam
+      explicabo, fugiat voluptas odit facere itaque. Similique, totam? Ea sint
+      maxime exercitationem praesentium incidunt?
+    </p>
+  </body>
 </html>
