Updated data/content added photo

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
       explicabo, fugiat voluptas odit facere itaque. Similique, totam? Ea sint
       maxime exercitationem praesentium incidunt?
     </p>
+
+    <img src="./download.jpeg" alt="" srcset="">
   </body>
 </html>
